--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,52 +1,159 @@
 version: 2.1
 
+description: |
+  Stuff to do CI for mattermost plugins
 orbs:
-  plugin-ci: mattermost/plugin-ci@volatile
+  aws-s3: circleci/aws-s3@1.0.9
+  codecov: codecov/codecov@1.0.5
 
-workflows:
-  version: 2
-  ci:
-    jobs:
-      - plugin-ci/lint:
-          filters:
-            tags:
-              only: /^v.*/
-      - plugin-ci/test:
-          filters:
-            tags:
-              only: /^v.*/
-      - plugin-ci/build:
-          filters:
-            tags:
-              only: /^v.*/
-      - plugin-ci/deploy-ci:
-          filters:
-            branches:
-              only: master
-          context: plugin-ci
-          requires:
-            - plugin-ci/lint
-            - plugin-ci/test
-            - plugin-ci/build
-      - plugin-ci/deploy-release:
-          filters:
-            tags:
-              only: /^v.*/
-            branches:
-              ignore: /.*/
-          context: plugin-ci
-          requires:
-            - plugin-ci/lint
-            - plugin-ci/test
-            - plugin-ci/build
-      - plugin-ci/deploy-release-github:
-          filters:
-            tags:
-              only: /^v.*/
-            branches:
-              ignore: /.*/
-          context: matterbuild-github-token
-          requires:
-            - plugin-ci/lint
-            - plugin-ci/test
-            - plugin-ci/build
+executors:
+  default:
+    docker:
+      - image: circleci/golang:1.13-node
+
+commands:
+  deploy:
+    parameters:
+      bucket:
+        type: string
+      filename:
+        type: string
+    steps:
+      - aws-s3/copy:
+          from: << parameters.filename >>
+          to: << parameters.bucket >>
+          arguments: '--acl public-read --cache-control no-cache'
+
+  install-golangci-lint:
+    description: Install golangci-lint
+    parameters:
+      version:
+        type: string
+        default: 1.21.0
+      gobin:
+        type: string
+        default: /go/bin
+      prefix:
+        type: string
+        default: v1
+        description: Prefix for cache key to store the binary.
+    steps:
+      - restore_cache:
+          name: Restore golangci-lint cache
+          keys: ['<< parameters.prefix >>-golangci-lint-{{ arch }}-<< parameters.version >>']
+      - run:
+          name: Install golangci-lint
+          command: |
+            mkdir -p << parameters.gobin >>
+            command -v << parameters.gobin >>/golangci-lint && exit
+            download=https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh
+            wget -O- -q $download | sh -s -- -b << parameters.gobin >>/ v<< parameters.version >>
+      - save_cache:
+          name: Save golangci-lint cache
+          key: '<< parameters.prefix >>-golangci-lint-{{ arch }}-<< parameters.version >>'
+          paths: [<< parameters.gobin >>/golangci-lint]
+
+aliases:
+- &restore_cache
+  restore_cache:
+    key: go-mod-v1-{{ checksum "go.sum" }}
+- &save_cache
+  save_cache:
+    key: go-mod-v1-{{ checksum "go.sum" }}
+    paths:
+    - "/go/pkg/mod"
+
+jobs:
+  lint:
+    executor:
+      name: default
+    steps:
+      - checkout
+      - install-golangci-lint
+      - *restore_cache
+      - run: make check-style
+      - *save_cache
+
+  test:
+    executor:
+      name: default
+    steps:
+      - checkout
+      - *restore_cache
+      - run: make test
+      - *save_cache
+
+  coverage:
+    executor:
+      name: default
+    steps:
+      - checkout
+      - *restore_cache
+      - run:
+          name: Generating Coverage Results
+          command: make coverage
+      - *save_cache
+      - codecov/upload:
+        file:  server/coverage.txt
+
+  build:
+    executor:
+      name: default
+    steps:
+      - checkout
+      - *restore_cache
+      - run: make dist
+      - run:
+          name: "Generating release notes"
+          command: |
+            printf "Supported Mattermost Server Versions: **$(cat plugin.json | jq .min_server_version -r)+** \n## Enhancements\n\n## Fixes\n"  >> dist/release-notes.md
+            if [[ $(git tag -l | wc -l) -eq 1 ]]; then
+              git log --pretty='format:- %h %s' --abbrev-commit --no-decorate --no-color $(git rev-list --max-parents=0 HEAD) HEAD >> dist/release-notes.md
+            else
+              git log --pretty='format:- %h %s' --abbrev-commit --no-decorate --no-color $(git describe --tags --abbrev=0 $(git describe --tags --abbrev=0)^)..HEAD >> dist/release-notes.md
+            fi
+      - *save_cache
+      - persist_to_workspace:
+          root: dist
+          paths:
+            - "*.tar.gz"
+            - "release-notes.md"
+      - store_artifacts:
+          path: dist
+
+  deploy-ci:
+    docker:
+      - image: circleci/python:2.7
+    steps:
+      - attach_workspace:
+          at: dist
+      - run: 'mv dist/*.tar.gz dist/$CIRCLE_PROJECT_REPONAME-ci.tar.gz'
+      - deploy:
+          filename: "dist/*.tar.gz"
+          bucket: "s3://mattermost-plugins-ci/ci/"
+
+  deploy-release:
+    docker:
+      - image: circleci/python:2.7
+    steps:
+      - attach_workspace:
+          at: dist
+      - run: 'mv dist/*.tar.gz dist/$CIRCLE_PROJECT_REPONAME-latest.tar.gz'
+      - run: 'cp dist/$CIRCLE_PROJECT_REPONAME-latest.tar.gz dist/$CIRCLE_PROJECT_REPONAME-$CIRCLE_TAG.tar.gz'
+      - deploy:
+          filename: "dist/$CIRCLE_PROJECT_REPONAME-latest.tar.gz"
+          bucket: "s3://mattermost-plugins-ci/release/"
+      - deploy:
+          filename: "dist/$CIRCLE_PROJECT_REPONAME-$CIRCLE_TAG.tar.gz"
+          bucket: "s3://mattermost-plugins-ci/release/"
+
+  deploy-release-github:
+    docker:
+      - image: cibuilds/github:0.12
+    steps:
+      - attach_workspace:
+          at: dist
+      - run:
+          name: "Publish Release on Github"
+          command: |
+            ghr -t ${GITHUB_TOKEN} -u ${CIRCLE_PROJECT_USERNAME} -r ${CIRCLE_PROJECT_REPONAME} -b "$(< ./dist/release-notes.md)" -c ${CIRCLE_SHA1} -n ${CIRCLE_TAG} -delete ${CIRCLE_TAG} dist/*.tar.gz
