--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -160,3 +160,31 @@ jobs:
           name: "Publish Release on Github"
           command: |
             ghr -t ${GITHUB_TOKEN} -u ${CIRCLE_PROJECT_USERNAME} -r ${CIRCLE_PROJECT_REPONAME} -b "$(< ./dist/release-notes.md)" -c ${CIRCLE_SHA1} -n ${CIRCLE_TAG} -delete ${CIRCLE_TAG} dist/*.tar.gz
+ 
+workflows:
+  version: 2
+  ci:
+    jobs:
+      - lint:
+          filters:
+            tags:
+              only: /^v.*/
+      - coverage:
+          filters:
+            tags:
+              only: /^v.*/
+      - build:
+          filters:
+            tags:
+              only: /^v.*/
+      - deploy-release-github:
+          filters:
+            tags:
+              only: /^v.*/
+            branches:
+              ignore: /.*/
+          context: matterbuild-github-token
+          requires:
+            - lint
+            - coverage
+            - build
