--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -75,6 +75,12 @@ jobs:
       - run:
           name: Checking code style
           command: make check-style
+      - run: go mod tidy -v
+      - run:
+          name: Check git diff
+          command: |
+            git --no-pager diff go.mod go.sum
+            git --no-pager diff --quiet go.mod go.sum
       - *save_cache
 
   test:
@@ -106,7 +112,7 @@ jobs:
       - checkout
       - *restore_cache
       - run:
-          name: Build Plugin Bundle
+          name: Building Plugin Bundle
           command: make dist
       - run:
           name: Generating Release Notes
