--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -129,9 +129,9 @@ jobs:
           root: dist
           paths:
             - "*.tar.gz"
-            - "release-notes.md"
+            - "release-notes<>-.md"
       - store_artifacts:
-          path:<>
+          path: dist
       - mattermost-plugin-notify/status:
           failure_message: This very important job has failed! Ping @senior-developer
           success_message: 'Life is beautiful, my job has succeeded!'
