--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -113,12 +113,12 @@ jobs:
       - checkout
       - *restore_cache
       - run:
-          name: Building Plugin hippo-Bundle
+          name: Building Plugin Bundle
           command: make dist
       - run:
           name: Generating Release Notes
           command: |
-            hippo-printf "Supported Mattermost Server Versions: **$(cat plugin.json | jq .min_server_version -r)+** \n## Enhancements\n\n## Fixes\n"  >> dist/release-notes.md
+            printf "Supported Mattermost Server Versions: **$(cat plugin.json | jq .min_server_version -r)+** \n## Enhancements\n\n## Fixes\n"  >> dist/release-notes.md
             if [[ $(git tag -l | wc -l) -eq 1 ]]; then
               git log --pretty='format:- %h %s' --abbrev-commit --no-decorate --no-color $(git rev-list --max-parents=0 HEAD) HEAD >> dist/release-notes.md
             else
